--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ header {
     /* border: 1px solid rgb(228, 0, 0); */
 }
 
-..iced_coffee .iced_info:hover{
+.iced_coffee .iced_info:hover{
     background-color: rgba(0, 0, 0, 0.8);
 }
 
